# rand_jitter_kernel

./: Cargo.toml  README.md
.github/workflows/: test-ci.yml
src/: lib.rs
tests/: rngs.rs
