[package]
name = "rand_jitter_kernel"
version = "0.1.1"
edition = "2024"
license = "MIT"
readme = "README.md"
authors = ["Markus Theil <theil.markus@gmail.com>"]
repository = "https://github.com/thillux/rand_jitter_kernel"
description = "provides interface to Linux kernel jitterentropy_rng"
keywords = ["rand", "random", "rng", "jitterentropy"]
categories = ["cryptography"]

[dependencies]
rand_core = "0.9.3"
libc = { version = "0.2.171" }

[dev-dependencies]
rand = "0.9.0"
rand_chacha = "0.9.0"
rand_xoshiro = "0.7.0"

[lints.rust]
missing_docs = "deny"
missing_debug_implementations = "deny"

[lints.clippy]
all = { level = "deny", priority = 0 }
pedantic = { level = "deny", priority = 0 }
cargo = { level = "deny", priority = 0 }
